[package]
name = "nzb"
description = "Get Things Done® with nzb, a beautiful terminal interface for Nozbe. Inspired by Wunderline"
version = "0.5.3"
authors = ["Govind KP <reisub0@gmail.com>"]
repository = "https://github.com/reisub0/nzb"
readme = "./README.md"
license = "MIT"
edition = "2018"
categories = ["api-bindings", "command-line-utilities"]
keywords = ["productivity", "nozbe", "cli", "todo", "task"]

[badges]
# # GitLab CI: `repository` is required. `branch` is optional; default is `master`
gitlab = { repository = "reisub0/nzb", branch = "master" }
is-it-maintained-issue-resolution = { repository = "reisub0/nzb" }
is-it-maintained-open-issues = { repository = "reisub0/nzb" }
# Maintenance: `status` is required. Available options are `actively-developed`,
# `passively-maintained`, `as-is`, `experimental`, `looking-for-maintainer`,
# `deprecated`, and the default `none`, which displays no badge on crates.io.
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "^1.0.5"
docopt = "^1"
prettytable-rs = "^0.8"
reqwest = "^0.9.11"
serde = { version = "^1", features=["derive"]}
serde_derive = "^1"
serde_json = "^1"
skim = "^0.5.5"
webbrowser = "^0.4.0"
